notizen
 Dataset: NPZ
════════════════════════════════════════════════════════════
NPZDataset: 1 recordings found
Dataset: npz, 1 samples

──────────────────────────────────────────────────
  Sample 1/1: 018_rec_0
  Frames: 900, FPS: 30.0
──────────────────────────────────────────────────
    Loading frames into RAM: synchronized_data_0.npz...
    Done: (1800, 768, 1024)
  YOLO: 500/500 frames with keypoints
  thermal_mean: HR=61.2, RR=10.8 BPM
/usr/local/Caskroom/miniforge/base/envs/toolbox/lib/python3.12/site-packages/sklearn/decomposition/_fastica.py:132: ConvergenceWarning: FastICA did not converge. Consider increasing tolerance or the maximum number of iterations.
  warnings.warn(
  ica: HR=62.1, RR=25.2 BPM
  garbey: HR=63.0, RR=8.1 BPM
/Users/valeriamoltschanov/Desktop/test_toolbox/main.py:630: UserWarning:   Visualisation failed: OpenCV(4.11.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgcodecs/src/loadsave.cpp:836: error: (-2:Unspecified error) could not find a writer for the specified extension in function 'imwrite_'

  warnings.warn(
    thermal_mean: HR 61.2 vs 44.0, RR 10.8 vs 6.0
    ica: HR 62.1 vs 44.0, RR 25.2 vs 6.0
    garbey: HR 63.0 vs 44.0, RR 8.1 vs 6.0

============================================================
  Processing complete in 2074.7s
============================================================
Per-sample results: results/summary/per_sample_results.csv

Evaluating: BP4D / thermal_mean

==================================================
  thermal_mean – Heart Rate
==================================================
  HR
    MAE     : 25.98 ± 2.79 BPM
    RMSE    : 26.28 BPM
    MAPE    : 27.7%
    Pearson : -1.000
    n       : 2

  thermal_mean – Respiration Rate
==================================================
  RR
    MAE     : 2.15 ± 0.49 BPM
    RMSE    : 2.25 BPM
    MAPE    : 14.8%
    Pearson : 1.000
    n       : 2
Traceback (most recent call last):
  File "/usr/local/Caskroom/miniforge/base/envs/toolbox/lib/python3.12/site-packages/scipy/stats/_kde.py", line 236, in __init__
    self.set_bandwidth(bw_method=bw_method)
  File "/usr/local/Caskroom/miniforge/base/envs/toolbox/lib/python3.12/site-packages/scipy/stats/_kde.py", line 579, in set_bandwidth
    self._compute_covariance()
  File "/usr/local/Caskroom/miniforge/base/envs/toolbox/lib/python3.12/site-packages/scipy/stats/_kde.py", line 591, in _compute_covariance
    self._data_cho_cov = linalg.cholesky(self._data_covariance,
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/Caskroom/miniforge/base/envs/toolbox/lib/python3.12/site-packages/scipy/_lib/_util.py", line 1181, in wrapper
    return f(*arrays, *other_args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/Caskroom/miniforge/base/envs/toolbox/lib/python3.12/site-packages/scipy/linalg/_decomp_cholesky.py", line 106, in cholesky
    c, lower = _cholesky(a, lower=lower, overwrite_a=overwrite_a, clean=True,
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/Caskroom/miniforge/base/envs/toolbox/lib/python3.12/site-packages/scipy/linalg/_decomp_cholesky.py", line 39, in _cholesky
    raise LinAlgError(
numpy.linalg.LinAlgError: 2-th leading minor of the array is not positive definite

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/valeriamoltschanov/Desktop/test_toolbox/main.py", line 824, in <module>
    run_pipeline(args.config)
  File "/Users/valeriamoltschanov/Desktop/test_toolbox/main.py", line 700, in run_pipeline
    eval_result = evaluate_algorithm(
                  ^^^^^^^^^^^^^^^^^^^
  File "/Users/valeriamoltschanov/Desktop/test_toolbox/evaluation/metrics.py", line 102, in evaluate_algorithm
    ba_hr.difference_plot(
  File "/Users/valeriamoltschanov/Desktop/test_toolbox/evaluation/bland_altman.py", line 215, in difference_plot
    z = gaussian_kde(np.vstack([avgs, diffs]))(np.vstack([avgs, diffs]))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/Caskroom/miniforge/base/envs/toolbox/lib/python3.12/site-packages/scipy/stats/_kde.py", line 245, in __init__
    raise linalg.LinAlgError(msg) from e
numpy.linalg.LinAlgError: The data appears to lie in a lower-dimensional subspace of the space in which it is expressed. This has resulted in a singular data covariance matrix, which cannot be treated using the algorithms implemented in `gaussian_kde`. Consider performing principal component analysis / dimensionality reduction and using `gaussian_kde` with the transformed data.
(toolbox) MacBook-Air-4:test_toolbox valeriamoltschanov$ 
